# mlops-projects

./: .gitignore  README.md
.github/workflows/: collect_evidence.yml  crossplane-package.yml  helm-ci.yml  trivy.yml
01_gitops_first_ml_pipeline_template/: README.md
02_model_drift_performance_dashboard/: .env.example  README.md  alert_rules.yml  alertmanager.yml  docker-compose.yml  prometheus.yml  requirements.txt
02_model_drift_performance_dashboard/app/: main.py
02_model_drift_performance_dashboard/docker/: Dockerfile  Dockerfile.monitor
02_model_drift_performance_dashboard/scripts/: generate_traffic.py  run_drift_monitor.py
03_cost_aware_gpu_auto_scaler_poc/: .gitignore  README.md  cost-comparison.csv  spot-interruption-handling.md
03_cost_aware_gpu_auto_scaler_poc/grafana/: dashboard.json
03_cost_aware_gpu_auto_scaler_poc/k8s/: provisioner.yaml  train-cronjob.yaml  train-job.yaml
03_cost_aware_gpu_auto_scaler_poc/terraform/: karpenter_policy.json  main.tf  metric_filters.tf  outputs.tf  variables.tf
04_feature_store_quick_start/: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
04_feature_store_quick_start/feature_repo/: driver_stats.py  feature_store.yaml  ingest.py  retrieve_online.py
04_feature_store_quick_start/notebooks/: demo.ipynb
04_feature_store_quick_start/terraform/: main.tf  outputs.tf  variables.tf
05_security_hardening_cookbook/: README.md
05_security_hardening_cookbook/manifests/: gatekeeper.yaml
05_security_hardening_cookbook/networkpolicies/: allow-namespace.yaml  deny-all.yaml
05_security_hardening_cookbook/scripts/: cis_scorecard.sh
06_cookiecutter_ml_project_dvc_precommit/: README.md  cookiecutter.json
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  dvc.yaml  mkdocs.yml  pyproject.toml  setup.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/.dvc/: config
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/config/: params.yaml
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/data/raw/: dataset.csv.dvc
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/docs/: index.md
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/notebooks/: 01_exploration.ipynb  example.ipynb
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/src/: train.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/src/data/: prepare.py  validate.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/src/features/: build_features.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/src/models/: evaluate.py  export.py  train.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/src/monitoring/: drift_detection.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/src/utils/: config.py  logging.py
06_cookiecutter_ml_project_dvc_precommit/{{cookiecutter.project_slug}}/tests/: conftest.py  test_data_prepare.py
07_self_service_jupyterhub_eks/: .gitignore  README.md  deploy.sh
07_self_service_jupyterhub_eks/docs/: README.md  gpu-setup.md  grafana-dashboard.md  new-environment.md  per-user-s3.md  security-guide.md
07_self_service_jupyterhub_eks/grafana/: dashboard.json
07_self_service_jupyterhub_eks/helm/: jupyterhub-values.yaml  values.yaml
07_self_service_jupyterhub_eks/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
08_openlineage_lineage_graph/: .env  .env.example  .gitignore  Makefile  README.md  architecture.mmd  docker-compose.yml
08_openlineage_lineage_graph/dags/: ml_lineage_dag.py
08_openlineage_lineage_graph/scripts/: create-multiple-dbs.sh
09_canary_ab_model_releases_istio/: README.md  cleanup.sh  deploy.sh  monitor.sh  setup.sh  test.sh
09_canary_ab_model_releases_istio/argo/: analysis-template.yaml  rollout.yaml
09_canary_ab_model_releases_istio/deploy/: v1.yaml  (+3 more)
10_multicloud_ml_platform_crossplane/: Makefile  README.md  cost-analysis.md  crossplane.yaml  failover.sh  setup.sh
11_automated_soc2_evidence_collector/: .gitignore  README.md  collect_evidence.py  requirements.txt  test_local.sh  verify_evidence.py
12_realtime_feature_pipeline_kafka_flink_feast/: Dockerfile.feast  README.md  docker-compose.yml  requirements.txt
13_reusable_helm_chart_model_serving/: README.md
14_chaos_engineering_suite_ml_pipelines/: .gitignore  README.md  install_litmus_helm.sh  metrics.md  validate_chaos.sh
15_opentelemetry_tracing_ml_inference/: .gitignore  README.md  docker-compose.yml  load_test.py  requirements.txt  tempo.yml
16_gitops_eks_mlops/: Dockerfile  Makefile  README.md  server.py
(+96 files in other folders)
