[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [ { name = "{{cookiecutter.author_name}}" } ]
license = { text = "{{cookiecutter.open_source_license}}" }
requires-python = ">={{cookiecutter.python_version}}"

[project.dependencies]
pandas = "*"

[tool.black]
line-length = 88
